# NeuralAmpModelerReamping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NAM/: lstm.h
testfiles/: 05-full-metal.nam
tools/: CMakeLists.txt  benchmodel.cpp  example.cpp  loadmodel.cpp  oldreamp.cppold  reamp copy.cpp  reamp.cpp  test.sh
